React重写展示页面